# fd2sdl

./: .gitignore  AGENTS.md  README.md
docs/: 01-decompilation-report.md  03-data-formats.md  04-development-plan.md  05-boot-flow.md  06-r2-ghidra-mapping.md  07-decompilation-corrections.md  08-font-text-mapping.md  09-battlefield-roadmap.md  10-field-unit-constructor.md  11-audio-plan.md  12-input-system.md  README.md  authoritative_funcs.txt  font-glyph-map.tsv  function-names.md  ghidra-decomp-all.c  le-fixups.txt  r2_funcs.txt
docs/formats/: data-formats.md  font-text-mapping.md
docs/plans/: audio.md  battlefield.md  development.md
docs/reverse-engineering/: address-mapping.md  boot-flow.md  decompilation-corrections.md  decompilation-report.md  field-unit-constructor.md  function-names.md  ghidra-reconstruction.md
docs/systems/: input.md
docs/tools/: README.md  dosbox-debug.md
src/: CMakeLists.txt  animation.c  animation.h  app_flow.c  app_flow.h  archive.c  archive.h  audio.c  audio.h  audio_pcm.c  audio_pcm.h  bgm.cpp  bgm.h  dialog_flow.c  dialog_flow.h  field.c  field.h  field_ai.c  field_ai.h  field_attack.c  field_attack.h  field_audio.c  field_audio.h  field_combat.c  field_combat.h  field_command.c  field_command.h  field_effect.c  field_effect.h  field_event.c  field_event.h  field_game.c  field_game.h  field_handoff.h  field_info.c  field_info.h  field_item.c  field_item.h  field_magic.c  field_magic.h  (+52 more)
src/tests/: app_flow_test.c  audio_pcm_test.c  audio_test.c  bgm_test.c  dialog_flow_test.c  field_ai_commit_test.c  field_ai_test.c  field_attack_test.c  field_combat_test.c  field_command_test.c  field_effect_test.c  field_event_test.c  field_game_attack_test.c  field_game_system_menu_test.c  field_info_test.c  field_manual_slot_test.c  field_path_test.c  field_rng_test.c  field_save_test.c  field_system_menu_test.c  field_unit_base_test.c  field_unit_stats_test.c  field_visual_test.c  input_test.c  save_test.c  title_test.c
tools/: analyze_fd2_audio.py  analyze_fd2_stage_code.py  analyze_fdfield_events.py  build_fd2_function_seeds.py  build_fd2_name_migration.py  compare_fd2_music_capture.py  compare_fd2_sfx_capture.py  dat_extract.py  dump_fd2_fixup_table.py  fd2_analysis_bundle.py  fd2_le_fixups.txt  rebuild_fd2_analysis.py  rebuild_fd2_ghidra.py  render_fd2_opl_prototype.sh  validate_le_fixups.py  verify_le_runtime_dump.py
tools/ghidra-scripts/: analyze_fd2_functions.py  decompile_clean.py  export_fd2_decomp.py  import_fd2_canonical.py  validate_fd2_canonical.py
tools/tests/: test_analyze_fd2_audio.py  test_dump_fd2_fixup_table.py  test_fd2_analysis_bundle.py  test_fd2_function_seeds.py  test_fd2_name_migration.py  test_rebuild_fd2_analysis.py  test_rebuild_fd2_ghidra.py
